# GT08S-open-firmware

./: .gitignore  CMakeLists.txt  GT08S.cmake  README.md  gt08s.cfg  sign.bat
.github/workflows/: blank.yml
bootloader/: CMakeLists.txt  linker.ld
bootloader/include/: bootdrivers.h  sha1.h  vibro.h
bootloader/include/drivers/: gpio.h  speaker.h  vibro.h
bootloader/src/: boot.c  bootdrivers.c  bootheader.c  header.c  sha1.c  vibro.c
bootloader/src/drivers/: gpio.c  lcd.c  speaker.c
common/include/: mt6261.h  mtktypes.h  systypes.h  utils.h
kernel/: CMakeLists.txt  linker.ld
kernel/include/drivers/: adienvic.h  dlist.h  emi.h  evmngr.h  gpio.h  gpt.h  lcd.h  lrtimer.h  memory.h  nvic.h  pctl.h  pll.h  rtc.h  speaker.h  spi.h  tcmcache.h  ustimer.h
kernel/src/: exchandlers.s  kernel.c  kernelheader.c  startup.S
kernel/src/drivers/: dlist.c  emi.c  evmngr.c  gpio.c  gpt.c  lrtimer.c  memory.c  nvic.c  pctl.c  pll.c  rtc.c  spi.c  tcmcache.c  tlsf.c  ustimer.c  vibro.c
stdlib/: CMakeLists.txt
stdlib/include/: picostd.h  systypes.h
stdlib/src/: picostd.c
tools/: gt08s.cfg
tools/flashtool/: Flash_tool.INI
tools/usbdriver/MTKUSBdriver_v1.0948.0/: ReadMe.txt
tools/usbdriver/MTKUSBdriver_v1.0948.0/2K_XP_COM/: usb2ser_2kXP.inf  usb2ser_XP64.inf
tools/usbdriver/MTKUSBdriver_v1.0948.0/98ME_COM/: USBCDC.INF
tools/usbdriver/MTKUSBdriver_v1.0948.0/98_Mass/: MTKUMSS.INF
tools/usbdriver/MTKUSBdriver_v1.0948.0/Vista_Win7/: usb2ser_Vista64_Win7.inf  usb2ser_Vista_Win7.inf
