set(CMAKE_CXX_FLAGS "")
set(CMAKE_C_FLAGS "")
project(GT08S)
# file(GLOB_RECURSE include_dirs "*/include")
file(GLOB include_dirs "*/include/")
include_directories(${include_dirs})
get_directory_property(dirs INCLUDE_DIRECTORIES)
set(global_includes "")
foreach(dir IN LISTS dirs)
    set(global_includes ${global_includes} -I ${dir})
endforeach()
add_subdirectory(stdlib)
add_subdirectory(bootloader)
add_subdirectory(kernel)
add_subdirectory(system)
file(MAKE_DIRECTORY "build/output")